--- a/templates/query.html
+++ b/templates/query.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Welcome to our Company Database!</title>
+    <title>Company Database</title>
 </head>
 <body>
   <a href="/">Click me</a>
