Put all add/delete/updates into dropdowns

--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,71 @@
     <title>Company Database</title>
 </head>
 <body>
-  <h1>Add a new type of Health Insurance coverage!</h1>
+  <div>
+  <h2>Add: </h2>
+  <form>
+    <select name = "addRow">
+      <option addingTable = "insurance">Health Insurance</option>
+      <option addingTable = "benefit">Benefit Type</option>
+      <option addingTable = "status">Project Status</option>
+      <option addingTable = "address">Address</option>
+      <option addingTable = "position">Job Position</option>
+      <option addingTable = "department">Department</option>
+      <option addingTable = "employee">Employee</option>
+      <option addingTable = "empBenefit">Employee's Benefit</option>
+      <option addingTable = "project">Project</option>
+      <option addingTable = "role">Role</option>
+      <option addingTable = "empProject">Employee's Project</option>
+      <option addingTable = "empDep">Employee's Department</option>
+    </select>
+  </form>
+  </div>
+  <div>
+    <h2>Update: </h2>
+    <form>
+      <select name = "updateRow">
+        <option updateTable = "insurance">Health Insurance</option>
+        <option updateTable = "benefit">Benefit Type</option>
+        <option updateTable = "status">Project Status</option>
+        <option updateTable = "address">Address</option>
+        <option updateTable = "position">Job Position</option>
+        <option updateTable = "department">Department</option>
+        <option updateTable = "employee">Employee</option>
+        <option updateTable = "empBenefit">Employee's Benefit</option>
+        <option updateTable = "project">Project</option>
+        <option updateTable = "role">Role</option>
+        <option updateTable = "empProject">Employee's Project</option>
+        <option updateTable = "empDep">Employee's Department</option>
+      </select>
+    </form>
+  </div>
+  <div>
+  <h2>Delete: </h2>
+  <form>
+    <select name = "deleteRow">
+      <option deletingTable = "insurance">Health Insurance</option>
+      <option deletingTable = "benefit">Benefit Type</option>
+      <option deletingTable = "status">Project Status</option>
+      <option deletingTable = "address">Address</option>
+      <option deletingTable = "position">Job Position</option>
+      <option deletingTable = "department">Department</option>
+      <option deletingTable = "employee">Employee</option>
+      <option deletingTable = "empBenefit">Employee's Benefit</option>
+      <option deletingTable = "project">Project</option>
+      <option deletingTable = "role">Role</option>
+      <option deletingTable = "empProject">Employee's Project</option>
+      <option deletingTable = "empDep">Employee's Department</option>
+    </select>
+  </form>
+  </div>
+  <div>
+    <h2><a href="/query/">Query</href></h2>
+  </div>
+</body>
+</html>
+
+<!-- 
+<h1>Add a new type of Health Insurance coverage!</h1>
   <p><a href="/addinsurance/">Click here!</a></p>
   <h2>Add a new type of benefit!</h2>
   <p><a href="/addbenefit/">Click here!</a></p>
@@ -34,6 +98,4 @@
   <h14>Delete from a table!</h14>
   <p><a href="/delete/">Click here!</a></p>
   <h15>Select a query!</h15>
-  <p><a href="/query/">Click here!</a></p>
-</body>
-</html>
+  <p><a href="/query/">Click here!</a></p> -->
