Dropdown works woooooo

--- a/templates/query.html
+++ b/templates/query.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h2>Show all: </h2>
-  <form method="POST">
+  <form action = "/showall/" method="POST">
     <select name = "show">
       <option value = "insurance">Health Insurance</option>
       <option value = "benefit">Benefit Type</option>
