Update and rename updateEmployeInfo.html to updateEmployeeInfo.html

--- a/templates/updateEmployeeInfo.html
+++ b/templates/updateEmployeeInfo.html
@@ -64,7 +64,8 @@
   </form>
   </div>
   <div>
-    <a href="/my-link/">Finalize selection</a>
+      <!-- Will need some change to make sure it gets the right values -->
+    <a href="/update-EmployeeInfo-<column>-<value>-<cond1>-<cond2>/">Finalize selection</a>
   </div>
 </body>
 </html>
