--- a/templates/updateHealthInsurance.html
+++ b/templates/updateHealthInsurance.html
@@ -23,7 +23,7 @@
   </div>
   <div>
       <!-- Will need some change to make sure it gets the right values -->
-    <a href="/update-HealthInsurance-<column>-<value>-<cond1>-<cond2>/">Finalize selection</a>
+    <a href="/update-HealthInsurance-coverage-<value>-coverage-<cond2>/">Finalize selection</a>
   </div>
 </body>
 </html>
