--- a/templates/addEmployeeInfo.html
+++ b/templates/addEmployeeInfo.html
@@ -101,12 +101,12 @@
 <h2>Add: </h2>
 <form action="/url" method="GET">
    <p>Please enter the new Health Insurance Coverage:</p>
-   <input type="text" value="company" id = "14">
+   <input type="text" value="company" id = "i14">
 </form>
 </div>
 <div>
       <!-- Will need some change to make sure it gets the right values -->
-  <a href="'/insert-EmployeeInfo-document.getElementById("i1").value()-<ssn>-<name>-<gender>-<DoB>-<address>-<phone>-<degree>-<years>-<hiringPosition>-<hiringSalary>-<currentPosition>-<currentSalary>-<coverage>/'">Finalize selection</a>
+  <a href="'/insert-EmployeeInfo/{{i1.value}}/{{i2.value}}/{{i3.value}}/{{i4.value}}/{{i5.value}}/{{i6.value}}/{{i7.value}}/{{i8.value}}/{{i9.value}}/{{i10.value}}/{{i11.value}}/{{i12.value}}/{{i13.value}}/{{i14.value}}/'">Finalize selection</a>
 </div>
 </body>
 </html>
