--- a/templates/deleteBenefits.html
+++ b/templates/deleteBenefits.html
@@ -8,16 +8,32 @@
 </head>
 <body>
   <div>
+  <h2>"Select" the table (it's for the code): </h2>
+  <form>
+    <select name = "i1">
+      <option attribute = "Benefits">Benefits</option>
+    </select>
+  </form>
+  </div>
+  <div>
+  <h2>Add the attribute to be deleted upon</h2>
+  <form>
+    <select name = "i2">
+      <option attribute = "benefit">Benefit</option>
+    </select>
+  </form>
+  </div>
+  <div>
   <h2>Add: </h2>
   <form action="/url" method="GET">
         <p>Please enter the benefit to delete:</p>
-        <input type="text" placeholder="0">
+        <input type="text" placeholder="0" name = "i3">
   </form>
   </div>
   
   <div>
       <!-- Will need some change to make sure it gets the right values -->
-    <a href="/delete-Benefits-benefit-<value>-benefit-<cond2>/">Finalize selection</a>
+    <a href="/delete/">Finalize selection</a>
   </div>
 </body>
 </html>
