--- a/templates/deleteAddresses.html
+++ b/templates/deleteAddresses.html
@@ -10,17 +10,17 @@
   <div>
   <h2>"Select" the table (it's for the code): </h2>
   <form>
-    <select name1 = "i1">
-      <option attribute1 = "Addresses">Addresses</option>
+    <select name = "i1">
+      <option attribute = "Addresses">Addresses</option>
     </select>
   </form>
   </div>
   <div>
   <h2>Add the attribute to be deleted upon</h2>
   <form>
-    <select name1 = "i2">
-      <option attribute1 = "address">Address</option>
-      <option attribute1 = "zipCode">Zip code</option>
+    <select name = "i2">
+      <option attribute = "address">Address</option>
+      <option attribute = "zipCode">Zip code</option>
     </select>
   </form>
   </div>
