--- a/templates/deletePositions.html
+++ b/templates/deletePositions.html
@@ -8,12 +8,20 @@
 </head>
 <body>
   <div>
+  <h2>"Select" the table (it's for the code): </h2>
+  <form>
+    <select name = "i1">
+      <option attribute = "Positions">Positions</option>
+    </select>
+  </form>
+  </div>
+  <div>
   <h2>Add the attribute to be deleted upon</h2>
   <form>
-    <select name1 = "makeSelection">
-      <option attribute1 = "Position">position</option>
-      <option attribute1 = "minSalary">mininimum salary</option>
-      <option attribute1 = "maxSalary">maximum salary</option>
+    <select name = "i2">
+      <option attribute = "Position">position</option>
+      <option attribute = "minSalary">mininimum salary</option>
+      <option attribute = "maxSalary">maximum salary</option>
     </select>
   </form>
   </div>
@@ -21,13 +29,13 @@
   <h2>Add: </h2>
   <form action="/url" method="GET">
         <p>Please enter the value to be deleted upon:</p>
-        <input type="text" placeholder="0">
+        <input type="text" placeholder="0" name = "i3">
   </form>
   </div>
   
   <div>
       <!-- Will need some change to make sure it gets the right values -->
-    <a href="/delete-Positions-<column>-<value>-<cond1>-<cond2>/">Finalize selection</a>
+    <a href="/delete/">Finalize selection</a>
   </div>
 </body>
 </html>
