--- a/templates/deleteProjectStatus.html
+++ b/templates/deleteProjectStatus.html
@@ -7,17 +7,33 @@
     <title>Company Database</title>
 </head>
 <body>
+<div>
+  <h2>"Select" the table (it's for the code): </h2>
+  <form>
+    <select name = "i1">
+      <option attribute = "ProjectStatus">Project Status</option>
+    </select>
+  </form>
+  </div>
+  <div>
+  <h2>Add the attribute to be deleted upon</h2>
+  <form>
+    <select name = "i2">
+      <option attribute = "status">Status</option>
+    </select>
+  </form>
+  </div>
   <div>
   <h2>Add: </h2>
   <form action="/url" method="GET">
         <p>Please enter the status to delete:</p>
-        <input type="text" placeholder="0">
+        <input type="text" placeholder="0" name = "i3">
   </form>
   </div>
   
   <div>
       <!-- Will need some change to make sure it gets the right values -->
-    <a href="/delete-ProjectStatus-status-<value>-status-<cond2>/">Finalize selection</a>
+    <a href="/delete/">Finalize selection</a>
   </div>
 </body>
 </html>
