--- a/templates/updateAddresses.html
+++ b/templates/updateAddresses.html
@@ -8,11 +8,19 @@
 </head>
 <body>
   <div>
+  <h2>"Select" the table (it's for the code): </h2>
+  <form>
+   <select name = "i1">
+     <option attribute = "Addresses">Addresses</option>
+   </select>
+  </form>
+  </div>
+  <div>
   <h2>Add the attribute to be updated</h2>
   <form>
-    <select name1 = "makeSelection">
-      <option attribute1 = "address">Address</option>
-      <option attribute1 = "zipCode">Zip code</option>
+    <select name = "i2">
+      <option attribute = "address">Address</option>
+      <option attribute = "zipCode">Zip code</option>
     </select>
   </form>
   </div>
@@ -20,15 +28,15 @@
   <h2>Add: </h2>
   <form action="/url" method="GET">
         <p>Please enter the new value:</p>
-        <input type="text" placeholder="0">
+        <input type="text" placeholder="0" name = "i3">
   </form>
   </div>
   <div>
   <h2>Add the condition's attribute</h2>
   <form>
-    <select name2 = "makeSelection">
-      <option attribute2 = "address">Address</option>
-      <option attribute2 = "zipCode">Zip code</option>
+    <select name = "i4">
+      <option attribute = "address">Address</option>
+      <option attribute = "zipCode">Zip code</option>
     </select>
   </form>
   </div>
@@ -36,12 +44,12 @@
   <h2>Add: </h2>
   <form action="/url" method="GET">
         <p>Add the condition's value:</p>
-        <input type="text" placeholder="0">
+        <input type="text" placeholder="0" name = "i5">
   </form>
   </div>
   <div>
       <!-- Will need some change to make sure it gets the right values -->
-    <a href="/update-Addresses-<column>-<value>-<cond1>-<cond2>/">Finalize selection</a>
+    <a href="/update/">Finalize selection</a>
   </div>
 </body>
 </html>
