--- a/templates/updateDepartments.html
+++ b/templates/updateDepartments.html
@@ -7,18 +7,42 @@
     <title>Company Database</title>
 </head>
 <body>
+<div>
+ <h2>"Select" the table (it's for the code): </h2>
+ <form>
+   <select name = "i1">
+     <option attribute = "Departments">Departments</option>
+   </select>
+ </form>
+</div>
+<div>
+  <h2>Add the attribute to be updated upon</h2>
+  <form>
+    <select name = "i2">
+      <option attribute = "department">Department</option>
+    </select>
+  </form>
+ </div>
   <div>
   <h2>Add: </h2>
   <form action="/url" method="GET">
         <p>Please enter the new department:</p>
-        <input type="text" placeholder="0">
+        <input type="text" placeholder="0" name = "i3">
   </form>
   </div>
+ <div>
+  <h2>Add the attribute of the condition to be updated upon</h2>
+  <form>
+    <select name = "i4">
+      <option attribute = "department">Department</option>
+    </select>
+  </form>
+ </div>
   <div>
   <h2>Add: </h2>
   <form action="/url" method="GET">
         <p>Add the old department to replace:</p>
-        <input type="text" placeholder="0">
+        <input type="text" placeholder="0" name = "i5">
   </form>
   </div>
   <div>
