--- a/templates/updateDepartments.html
+++ b/templates/updateDepartments.html
@@ -47,7 +47,7 @@
   </div>
   <div>
       <!-- Will need some change to make sure it gets the right values -->
-    <a href="/update-Departments-department-<value>-department-<cond2>/">Finalize selection</a>
+    <a href="/update/">Finalize selection</a>
   </div>
 </body>
 </html>
