--- a/templates/updateBenefits.html
+++ b/templates/updateBenefits.html
@@ -16,7 +16,7 @@
  </form>
  </div>
 <div>
-  <h2>Add the attribute to be deleted upon</h2>
+  <h2>Add the attribute to be updated upon</h2>
   <form>
     <select name = "i2">
       <option attribute = "benefit">Benefit</option>
@@ -31,7 +31,7 @@
   </form>
   </div>
 <div>
-  <h2>Add the attribute to be deleted upon</h2>
+  <h2>Add the attribute of the condition to be updated upon</h2>
   <form>
     <select name = "i4">
       <option attribute = "benefit">Benefit</option>
