--- a/templates/updateHealthInsurance.html
+++ b/templates/updateHealthInsurance.html
@@ -7,23 +7,47 @@
     <title>Company Database</title>
 </head>
 <body>
+<div>
+ <h2>"Select" the table (it's for the code): </h2>
+ <form>
+   <select name = "i1">
+     <option attribute = "HealthInsurance">Health Insurance</option>
+   </select>
+ </form>
+</div>
+  <div>
+  <h2>Add the attribute to be updated upon</h2>
+  <form>
+    <select name = "i2">
+      <option attribute = "coverage">Coverage</option>
+    </select>
+  </form>
+ </div>
   <div>
   <h2>Add: </h2>
   <form action="/url" method="GET">
         <p>Please enter the new coverage:</p>
-        <input type="text" placeholder="0">
+        <input type="text" placeholder="0" name="i3">
   </form>
   </div>
+<div>
+  <h2>Add the attribute of the condition to be updated upon</h2>
+  <form>
+    <select name = "i4">
+      <option attribute = "coverage">Coverage</option>
+    </select>
+  </form>
+ </div>
   <div>
   <h2>Add: </h2>
   <form action="/url" method="GET">
         <p>Add the old coverage to replace:</p>
-        <input type="text" placeholder="0">
+        <input type="text" placeholder="0" name="i5">
   </form>
   </div>
   <div>
       <!-- Will need some change to make sure it gets the right values -->
-    <a href="/update-HealthInsurance-coverage-<value>-coverage-<cond2>/">Finalize selection</a>
+    <a href="/update/">Finalize selection</a>
   </div>
 </body>
 </html>
