--- a/templates/updatePositions.html
+++ b/templates/updatePositions.html
@@ -8,12 +8,20 @@
 </head>
 <body>
   <div>
+ <h2>"Select" the table (it's for the code): </h2>
+ <form>
+   <select name = "i1">
+     <option attribute = "Positions">Positions</option>
+   </select>
+ </form>
+</div>
+  <div>
   <h2>Add the attribute to be updated</h2>
   <form>
-    <select name1 = "makeSelection">
-      <option attribute1 = "Position">position</option>
-      <option attribute1 = "minSalary">mininimum salary</option>
-      <option attribute1 = "maxSalary">maximum salary</option>
+    <select name = "i2">
+      <option attribute = "Position">position</option>
+      <option attribute = "minSalary">mininimum salary</option>
+      <option attribute = "maxSalary">maximum salary</option>
     </select>
   </form>
   </div>
@@ -21,16 +29,16 @@
   <h2>Add: </h2>
   <form action="/url" method="GET">
         <p>Please enter the new value:</p>
-        <input type="text" placeholder="0">
+        <input type="text" placeholder="0" name = "i3">
   </form>
   </div>
   <div>
   <h2>Add the condition's attribute</h2>
   <form>
-    <select name2 = "makeSelection">
-      <option attribute2 = "Position">position</option>
-      <option attribute2 = "minSalary">mininimum salary</option>
-      <option attribute2 = "maxSalary">maximum salary</option>
+    <select name = "i4">
+      <option attribute = "Position">position</option>
+      <option attribute = "minSalary">mininimum salary</option>
+      <option attribute = "maxSalary">maximum salary</option>
     </select>
   </form>
   </div>
@@ -38,7 +46,7 @@
   <h2>Add: </h2>
   <form action="/url" method="GET">
         <p>Add the condition's value:</p>
-        <input type="text" placeholder="0">
+        <input type="text" placeholder="0" name = "i5">
   </form>
   </div>
   <div>
