--- a/templates/updatePositions.html
+++ b/templates/updatePositions.html
@@ -51,7 +51,7 @@
   </div>
   <div>
       <!-- Will need some change to make sure it gets the right values -->
-    <a href="/update-Positions-<column>-<value>-<cond1>-<cond2>/">Finalize selection</a>
+    <a href="/update/">Finalize selection</a>
   </div>
 </body>
 </html>
