--- a/templates/updateProjectStatus.html
+++ b/templates/updateProjectStatus.html
@@ -7,23 +7,48 @@
     <title>Company Database</title>
 </head>
 <body>
+<div>
+ <h2>"Select" the table (it's for the code): </h2>
+ <form>
+   <select name = "i1">
+     <option attribute = "ProjectStatus">Project Status</option>
+   </select>
+ </form>
+</div>
+<div>
+  <h2>Add the attribute to be updated upon</h2>
+  <form>
+    <select name = "i2">
+      <option attribute = "status">Status</option>
+    </select>
+  </form>
+ </div>
+
   <div>
   <h2>Add: </h2>
   <form action="/url" method="GET">
         <p>Please enter the new status:</p>
-        <input type="text" placeholder="0">
+        <input type="text" placeholder="0" name = "i3">
   </form>
   </div>
+<div>
+  <h2>Add the attribute of the condtion to be updated upon</h2>
+  <form>
+    <select name = "i4">
+      <option attribute = "status">Status</option>
+    </select>
+  </form>
+ </div>
   <div>
   <h2>Add: </h2>
   <form action="/url" method="GET">
         <p>Add the old status to replace:</p>
-        <input type="text" placeholder="0">
+        <input type="text" placeholder="0" name = "i5">
   </form>
   </div>
   <div>
       <!-- Will need some change to make sure it gets the right values -->
-    <a href="/update-ProjectStatus-status-<value>-status-<cond2>/">Finalize selection</a>
+    <a href="/update/">Finalize selection</a>
   </div>
 </body>
 </html>
