--- a/templates/addEmployeeInfo.html
+++ b/templates/addEmployeeInfo.html
@@ -19,97 +19,24 @@
    <input type="text" name="i4"/> <br>
    <p>Please enter the new Date of Birth as yyyy-mm-dd:</p>
    <input type="text" name="i5"/> <br>
-</form>
-</div>
-<div>
-<h2>Add: </h2>
-<form action="/url" method="GET">
-   <p>Please enter the new SSN:</p>
-   <input type="text" value="000-00-0000" name="i2">
-</form>
-</div>
-<div>
-<h2>Add: </h2>
-<form action="/url" method="GET">
-   <p>Please enter the new Name:</p>
-   <input type="text" value="John Smith" name="i3">
-</form>
-</div>
-<div>
-<h2>Add: </h2>
-<form action="/url" method="GET">
-   <p>Please enter the new Gender:</p>
-   <input type="text" value="None" name="i4">
-</form>
-</div>
-<div>
-<h2>Add: </h2>
-<form action="/url" method="GET">
-   <p>Please enter the new Date of Birth as yyyy-mm-dd:</p>
-   <input type="text" value="1950-01-01" name="i5">
-</form>
-</div>
-<div>
-<h2>Add: </h2>
-<form action="/url" method="GET">
    <p>Please enter the new Primary Address:</p>
-   <input type="text" value="1 Main Street" name="i6">
-</form>
-</div>
-<div>
-<h2>Add: </h2>
-<form action="/url" method="GET">
+   <input type="text" name="i6"/> <br>
    <p>Please enter the new Phone Number:</p>
-   <input type="text" value="111-111-1111" name="i7">
-</form>
-</div>
-<div>
-<h2>Add: </h2>
-<form action="/url" method="GET">
+   <input type="text" name="i7"/> <br>
    <p>Please enter the new Highest Degree:</p>
-   <input type="text" value="Bachelor's" name="i8">
-</form>
-</div>
-<div>
-<h2>Add: </h2>
-<form action="/url" method="GET">
+   <input type="text" name="i8"/> <br>
    <p>Please enter the new Years of Experience:</p>
-   <input type="text" placeholder="0" name="i9">
-</form>
-</div>
-<div>
-<h2>Add: </h2>
-<form action="/url" method="GET">
+   <input type="text" name="i9"/> <br>
    <p>Please enter the new Hiring Position:</p>
-   <input type="text" placeholder="Research Scientist" name="i10">
-</form>
-</div>
-<div>
-<h2>Add: </h2>
-<form action="/url" method="GET">
+   <input type="text" name="i10"/> <br>
    <p>Please enter the new Hiring Salary:</p>
-   <input type="text" placeholder="50000" name="i11">
-</form>
-</div>
-<div>
-<h2>Add: </h2>
-<form action="/url" method="GET">
+   <input type="text" name="i11"/> <br>
    <p>Please enter the new Current Position:</p>
-   <input type="text" placeholder="Research Scientist" name = "i12">
-</form>
-</div>
-<div>
-<h2>Add: </h2>
-<form action="/url" method="GET">
+   <input type="text" name="i12"/> <br>
    <p>Please enter the new Current Salary:</p>
-   <input type="text" value="50000" name = "i13">
-</form>
-</div>
-<div>
-<h2>Add: </h2>
-<form action="/url" method="GET">
+   <input type="text" name="i13"/> <br>
    <p>Please enter the new Health Insurance Coverage:</p>
-   <input type="text" value="company" name = "i14">
+   <input type="text" name="i14"/> <br>
 </form>
 </div>
 <div>
