--- a/templates/addHealthInsurance.html
+++ b/templates/addHealthInsurance.html
@@ -1,6 +1,26 @@
 {%extends "template.html"%}
 {%block title%}
-<h2>Add Health Insurance</h2>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Add Health Insurance</title>
+</head>
+<div>
+<h2>Add: </h2>
+<form action="/url" method="GET">
+   <p>Please enter the new type of coverage:</p>
+   <input type="text" name="i1"/> <br>
+</form>
+</div>
+<div>
+      <!-- Will need some change to make sure it gets the right values -->
+  <a href="'/insert-HealthInsurance/'">Finalize selection</a>
+</div>
+</body>
+</html>
 {%endblock%}
 {%block content%}
 
