--- a/templates/home.html
+++ b/templates/home.html
@@ -8,62 +8,69 @@
   <div>
   <h2>Add: </h2>
   <form>
-    <select name = "addRow">
-      <option addingTable = "insurance">Health Insurance</option>
-      <option addingTable = "benefit">Benefit Type</option>
-      <option addingTable = "status">Project Status</option>
-      <option addingTable = "address">Address</option>
-      <option addingTable = "position">Job Position</option>
-      <option addingTable = "department">Department</option>
-      <option addingTable = "employee">Employee</option>
-      <option addingTable = "empBenefit">Employee's Benefit</option>
-      <option addingTable = "project">Project</option>
-      <option addingTable = "role">Role</option>
-      <option addingTable = "empProject">Employee's Project</option>
-      <option addingTable = "empDep">Employee's Department</option>
+    <select name = "operation">
+      <option Table = "insurance">Add to Health Insurance</option>
+      <option Table = "benefit">Add to Benefit Type</option>
+      <option Table = "status">Add to Project Status</option>
+      <option Table = "address">Add to Address</option>
+      <option Table = "position">Add to Job Position</option>
+      <option Table = "department">Add to Department</option>
+      <option Table = "employee">Add to Employee</option>
+      <option Table = "empBenefit">Add to Employee's Benefit</option>
+      <option Table = "project">Add to Project</option>
+      <option Table = "role">Add to Role</option>
+      <option Table = "empProject">Add to Employee's Project</option>
+      <option Table = "empDep">Add to Employee's Department</option>
+      <option Table = "insurance">Update Health Insurance</option>
+      <option Table = "benefit">Update Benefit Type</option>
+      <option Table = "status">Update Project Status</option>
+      <option Table = "address">Update Address</option>
+      <option Table = "position">Update Job Position</option>
+      <option Table = "department">Update Department</option>
+      <option Table = "employee">Update Employee</option>
+      <option Table = "empBenefit">Update Employee's Benefit</option>
+      <option Table = "project">Update Project</option>
+      <option Table = "role">Update Role</option>
+      <option Table = "empProject">Update Employee's Project</option>
+      <option Table = "empDep">Update Employee's Department</option>
+      <option Table = "insurance">Delete from Health Insurance</option>
+      <option Table = "benefit">Delete from Benefit Type</option>
+      <option Table = "status">Delete from Project Status</option>
+      <option Table = "address">Delete from Address</option>
+      <option Table = "position">Delete from Job Position</option>
+      <option Table = "department">Delete from Department</option>
+      <option Table = "employee">Delete from Employee</option>
+      <option Table = "empBenefit">Delete from Employee's Benefit</option>
+      <option Table = "project">Delete from Project</option>
+      <option Table = "role">Delete from Role</option>
+      <option Table = "empProject">Delete from Employee's Project</option>
+      <option Table = "empDep">Delete from Employee's Department</option>
+      <option Table = "query1">Finding employee’s data for a given employee</option>
+      <option Table = "query2">Finding who are employees of a given department</option>
+      <option Table = "query3">Finding who are employees working on a given project</option>
+      <option Table = "query4">Finding the zip code that most employees live in</option>
+      <option Table = "query5">Finding the project info of any given project</option>
+      <option Table = "query6">Finding the number of employees working on a given project at any given time</option>
+      <option Table = "query7">Finding the number of employees who have a certain benefit</option>
+      <option Table = "query8">Finding the employee who has a given role in a given project</option>
+      <option Table = "query9">Finding all active projects</option>
+      <option Table = "query10">Finding any information of each department</option>
+      <option Table = "query11">Finding the current role of an employee</option>
+      <option Table = "query12">Finding all roles of an employees along with the date</option>
+      <option Table = "query13">Finding the number of employees who have certain health plan</option>
+      <option Table = "query14">Finding the number of employees for each and all the types of health plan</option>
+      <option Table = "query15">Finding if the salary of underpaid female employees is improved?</option>
+      <option Table = "query16">Finding min & max salary for a given position</option>
+      <option Table = "query17">Finding the number of projects per project status</option>
+      <option Table = "query18">Finding the start & end date of a given employee for any of the employee’s department(s)</option>
+      <option Table = "query19">Finding the name of all project leaders along with the name of project</option>
+      <option Table = "query20">Finding whose salaries are increased by 20% since their hiring in the company</option>
+      <option Table = "query21">Finding which position type has the highest average salary</option>
     </select>
   </form>
   </div>
   <div>
-    <h2>Update: </h2>
-    <form>
-      <select name = "updateRow">
-        <option updateTable = "insurance">Health Insurance</option>
-        <option updateTable = "benefit">Benefit Type</option>
-        <option updateTable = "status">Project Status</option>
-        <option updateTable = "address">Address</option>
-        <option updateTable = "position">Job Position</option>
-        <option updateTable = "department">Department</option>
-        <option updateTable = "employee">Employee</option>
-        <option updateTable = "empBenefit">Employee's Benefit</option>
-        <option updateTable = "project">Project</option>
-        <option updateTable = "role">Role</option>
-        <option updateTable = "empProject">Employee's Project</option>
-        <option updateTable = "empDep">Employee's Department</option>
-      </select>
-    </form>
-  </div>
-  <div>
-  <h2>Delete: </h2>
-  <form>
-    <select name = "deleteRow">
-      <option deletingTable = "insurance">Health Insurance</option>
-      <option deletingTable = "benefit">Benefit Type</option>
-      <option deletingTable = "status">Project Status</option>
-      <option deletingTable = "address">Address</option>
-      <option deletingTable = "position">Job Position</option>
-      <option deletingTable = "department">Department</option>
-      <option deletingTable = "employee">Employee</option>
-      <option deletingTable = "empBenefit">Employee's Benefit</option>
-      <option deletingTable = "project">Project</option>
-      <option deletingTable = "role">Role</option>
-      <option deletingTable = "empProject">Employee's Project</option>
-      <option deletingTable = "empDep">Employee's Department</option>
-    </select>
-  </form>
-  </div>
-  <div>
-    <h2><a href="/query/">Query</href></h2>
+    <h2><a href="/selection/">Make Selection</href></h2>
   </div>
 </body>
 </html>
